@@ -49,6 +49,7 @@
     <action title="Edit" action_id="edit" category="object" condition_expr=""
             description="" icon_expr="" link_target=""
             url_expr="string:${object_url}/edit" visible="True">
+            <permission value="Modify portal content"/>
     </action>
 
 </object>
