@@ -1,0 +1,16 @@
+<?xml version="1.0"?>
+<object name="ftw.addressblock.AddressBlock">
+
+  <action title="Edit"
+          action_id="edit"
+          category="object"
+          condition_expr=""
+          description=""
+          icon_expr=""
+          link_target=""
+          url_expr="string:${object_url}/edit"
+          visible="True">
+    <permission value="Modify portal content"/>
+  </action>
+
+</object>
